[gd_scene load_steps=14 format=3 uid="uid://w8h66hs4r8rm"]

[ext_resource type="Script" path="res://game.gd" id="1_epae2"]
[ext_resource type="Script" path="res://paddle.gd" id="2_i72po"]
[ext_resource type="PackedScene" uid="uid://c771vnn0c23vs" path="res://ball.tscn" id="3_xyr11"]
[ext_resource type="AudioStream" uid="uid://c4pn2akywe7y3" path="res://assets/audio/JDSherbert - Ultimate UI SFX Pack - Popup Open - 1.wav" id="4_vy8wo"]
[ext_resource type="AudioStream" uid="uid://dhfodr7l52ygm" path="res://assets/audio/JDSherbert - Ultimate UI SFX Pack - Popup Close - 1.wav" id="5_pj2gc"]
[ext_resource type="AudioStream" uid="uid://dvfxi2grbmh6w" path="res://assets/audio/JDSherbert - Ultimate UI SFX Pack - Cancel - 2.wav" id="6_c8j78"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l0v1f"]
size = Vector2(500, 2016)

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_wlj6y"]
bounce = 0.5

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7wkj5"]
size = Vector2(1920, 500)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ldg2r"]
size = Vector2(500, 2016)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vsb8g"]
size = Vector2(1920, 468)

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_ow2su"]
friction = 0.5
rough = true
bounce = 0.25

[sub_resource type="RectangleShape2D" id="RectangleShape2D_60qlo"]
size = Vector2(240, 32)

[node name="Game" type="Node"]
script = ExtResource("1_epae2")

[node name="Background" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect" type="ColorRect" parent="Background"]
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0, 0, 0, 1)

[node name="Walls" type="Node2D" parent="."]

[node name="Left" type="StaticBody2D" parent="Walls"]

[node name="ColorRect" type="ColorRect" parent="Walls/Left"]
offset_right = 32.0
offset_bottom = 1080.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Left"]
position = Vector2(-218, 540)
shape = SubResource("RectangleShape2D_l0v1f")

[node name="Top" type="StaticBody2D" parent="Walls"]
collision_mask = 2
physics_material_override = SubResource("PhysicsMaterial_wlj6y")

[node name="ColorRect" type="ColorRect" parent="Walls/Top"]
offset_left = 32.0
offset_right = 1888.0
offset_bottom = 32.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Top"]
position = Vector2(960, -218)
shape = SubResource("RectangleShape2D_7wkj5")

[node name="Right" type="StaticBody2D" parent="Walls"]

[node name="ColorRect" type="ColorRect" parent="Walls/Right"]
offset_left = 1888.0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Right"]
position = Vector2(2138, 540)
shape = SubResource("RectangleShape2D_ldg2r")

[node name="Bottom" type="StaticBody2D" parent="Walls"]
collision_mask = 2
physics_material_override = SubResource("PhysicsMaterial_wlj6y")

[node name="ColorRect" type="ColorRect" parent="Walls/Bottom"]
offset_left = 32.0
offset_top = 1048.0
offset_right = 1888.0
offset_bottom = 1080.0
color = Color(0, 0, 0, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Bottom"]
position = Vector2(960, 1314)
shape = SubResource("RectangleShape2D_vsb8g")

[node name="Paddle" type="AnimatableBody2D" parent="."]
position = Vector2(960, 984)
collision_layer = 4
physics_material_override = SubResource("PhysicsMaterial_ow2su")
sync_to_physics = false
script = ExtResource("2_i72po")

[node name="ColorRect" type="ColorRect" parent="Paddle"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = -16.0
offset_right = 120.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Paddle"]
shape = SubResource("RectangleShape2D_60qlo")

[node name="Ball" parent="." instance=ExtResource("3_xyr11")]

[node name="Bricks" type="Node" parent="."]

[node name="UI" type="CanvasLayer" parent="."]

[node name="Scores" type="GridContainer" parent="UI"]
offset_left = 50.0
offset_top = 45.0
offset_right = 279.0
offset_bottom = 149.0
size_flags_horizontal = 0
columns = 2

[node name="ScoreLabel" type="Label" parent="UI/Scores"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Score: "
horizontal_alignment = 2

[node name="Score" type="Label" parent="UI/Scores"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "0"

[node name="HighScoreLabel" type="Label" parent="UI/Scores"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "High Score: "

[node name="HighScore" type="Label" parent="UI/Scores"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "0"

[node name="Lives" type="GridContainer" parent="UI"]
offset_left = 1740.0
offset_top = 50.0
offset_right = 1865.0
offset_bottom = 154.0
size_flags_horizontal = 8
columns = 2

[node name="LivesLabel" type="Label" parent="UI/Lives"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Lives: "

[node name="Lives" type="Label" parent="UI/Lives"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "3"

[node name="GetReady" type="Label" parent="UI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -124.5
offset_top = 214.0
offset_right = 124.5
offset_bottom = 281.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 48
text = "Get Ready!"

[node name="GameOverScreen" type="ColorRect" parent="UI"]
visible = false
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0.752941, 0.25098, 0.25098, 0.8)

[node name="VBoxContainer" type="VBoxContainer" parent="UI/GameOverScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -252.5
offset_top = -101.0
offset_right = 252.5
offset_bottom = 101.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 12

[node name="Label" type="Label" parent="UI/GameOverScreen/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 84
text = "GAME OVER!"

[node name="PlayAgain" type="Button" parent="UI/GameOverScreen/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Play Again"

[node name="ShowCredits" type="Button" parent="UI/GameOverScreen/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Credits"

[node name="PauseScreen" type="ColorRect" parent="UI"]
visible = false
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0.768627, 0.768627, 0.768627, 0.768627)

[node name="HBoxContainer" type="VBoxContainer" parent="UI/PauseScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -284.0
offset_top = -105.0
offset_right = 284.0
offset_bottom = 105.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="UI/PauseScreen/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 84
text = "PAUSED"

[node name="Resume" type="Button" parent="UI/PauseScreen/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Resume"

[node name="WinScreen" type="ColorRect" parent="UI"]
visible = false
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0.568627, 1, 0.556863, 0.501961)

[node name="VBoxContainer" type="VBoxContainer" parent="UI/WinScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -220.0
offset_top = -97.0
offset_right = 220.0
offset_bottom = 97.0
grow_horizontal = 2
grow_vertical = 2

[node name="YouWin" type="Label" parent="UI/WinScreen/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 84
text = "YOU WIN!!!"

[node name="PlayAgain" type="Button" parent="UI/WinScreen/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Play Again"

[node name="ShowCredits" type="Button" parent="UI/WinScreen/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Credits"

[node name="CreditsScreen" type="ColorRect" parent="UI"]
visible = false
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0, 0, 0, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="UI/CreditsScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -252.5
offset_top = -101.0
offset_right = 252.5
offset_bottom = 101.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 12

[node name="Label" type="Label" parent="UI/CreditsScreen/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 84
text = "Credits"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="UI/CreditsScreen/VBoxContainer"]
layout_mode = 2

[node name="VersionLabel" type="Label" parent="UI/CreditsScreen/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="UI/CreditsScreen/VBoxContainer"]
layout_mode = 2

[node name="Credits" type="Label" parent="UI/CreditsScreen/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "• Design: Michael J. Kozubal Jr. (mjkjr.itch.io)
• Code: Michael J. Kozubal Jr. (github.com/mjkjr)
• Engine: Godot (godotengine.org)
• Sound Effects: JDSherbert (jdsherbert.itch.io)
• Special Thanks: Matthew S (20_games_challenge.gitlab.io)"

[node name="DismissCredits" type="Button" parent="UI/CreditsScreen/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Dismiss"

[node name="Audio" type="Node" parent="."]

[node name="Brick" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("4_vy8wo")
bus = &"Phaser"

[node name="Paddle" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("5_pj2gc")
bus = &"Phaser"

[node name="Miss" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("6_c8j78")
bus = &"Phaser"

[connection signal="body_entered" from="Ball" to="." method="_on_ball_body_entered"]
[connection signal="get_ready" from="Ball" to="." method="_on_ball_get_ready"]
[connection signal="go" from="Ball" to="." method="_on_ball_go"]
[connection signal="pressed" from="UI/GameOverScreen/VBoxContainer/PlayAgain" to="." method="_on_play_again_pressed"]
[connection signal="pressed" from="UI/GameOverScreen/VBoxContainer/ShowCredits" to="." method="_on_show_credits_pressed"]
[connection signal="pressed" from="UI/PauseScreen/HBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="UI/WinScreen/VBoxContainer/PlayAgain" to="." method="_on_play_again_pressed"]
[connection signal="pressed" from="UI/WinScreen/VBoxContainer/ShowCredits" to="." method="_on_show_credits_pressed"]
[connection signal="pressed" from="UI/CreditsScreen/VBoxContainer/DismissCredits" to="." method="_on_dismiss_credits_pressed"]
